--- a/Web-Homework/Views/Home/Duyurular.cshtml
+++ b/Web-Homework/Views/Home/Duyurular.cshtml
@@ -2,60 +2,7 @@
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="carousel slide" data-ride="carousel" style="width:60%;margin:40px auto;">
-    <div class="baslik d-flex flex-row" style="margin:10px auto">
-        <span key=3 style="font-size:30px; font-weight:bolder">Home</span>
-    </div>
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" style=" border: 1px solid rgb(38 57 77); border-radius: 3px; box-shadow: rgb(38 57 77) 0px 20px 30px -10px;">
-        <div class="carousel-item active">
-            <a href="https://kygm.gsb.gov.tr/HaberDetaylari/10008/1/254490/genclik-ve-spor-bakani-kasapoglundan-burs-kredi-mujdesi.aspx">
-                <img class="d-block w-100" src="https://kygm.gsb.gov.tr/public/Images/KYGM/012014/thumbs/kapak_site_33$930x520.jpg" alt="First slide">
-            </a>
-            <div style="border-radius:3px; padding:30px;">
-                <h5 key="28" style="color: #DB0032; font-weight: bolder; font-size: 23px;">
-                    Gençlik ve Spor Bakanı Kasapoğlu'ndan Burs/Kredi Müjdesi
-
-                </h5>
-                <p key="29">Burs/kredi başvuru süresi uzatıldı. Daha önce başvurularını gerçekleştirme fırsatı bulamayan gençler, başvurularını 26 Kasım Cumartesi günü saat 23.59’a kadar e-Devlet üzerinden yapabilecek.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <a href="https://kygm.gsb.gov.tr/HaberDetaylari/10008/1/254486/gencler-konyada-bulusuyor.aspx">
-                <img class="d-block w-100" src="https://kygm.gsb.gov.tr/public/Images/KYGM/012014/thumbs/kapak_site_32$930x520.jpg">
-            </a>
-            <div style="border-radius:3px; padding:30px;">
-                <h5 key="30" style="color: #DB0032; font-weight: bolder; font-size: 23px;">
-                    Gençler Konya’da Buluşuyor
-                </h5>
-                <p key="31">Günübirlik gerçekleştirilecek gezide Şems-i Tebrizi Türbesi/Camii, Şerafettin Camii, İplikçi Camii, Mevlana Türbe ve Müzesi, Kelebekler Vadisi, Şehitlik, Alaaddin Tepesi/Camii, Aziziye Camii gibi tarihi ve kültürel mekânlar ziyaret edilecek.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <a href="https://kygm.gsb.gov.tr/HaberDetaylari/10008/1/254992/bakan-kasapoglu-duyurdu-gsb-burs-ogrenim-kredisi-sonuclari-aciklandi.aspx">
-                <img class="d-block w-100" src="https://kygm.gsb.gov.tr/public/Images/KYGM/012014/thumbs/kapak_527$930x520.jpg">
-            </a>
-            <div style="border-radius:3px; padding:30px;">
-                <h5 key="32" style="color: #DB0032; font-weight: bolder; font-size: 23px;">
-                    Bakan Kasapoğlu Duyurdu: GSB Burs/Öğrenim Kredisi Sonuçları Açıklandı!
-                </h5>
-                <p key="33">Burs/öğrenim kredisi kazanan öğrencilere ödeme yapılabilmesi için taahhütnamelerin süresi içerisinde onaylanması gerekiyor. Taahhütname onayı için son gün 20 Aralık.</p>
-            </div>
-        </div>
-    </div>
-    <a class="carousel-control-prev" style="left:-160px;" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <img style="width: 50px; height: 50px; background: transparent; transform: rotate(180deg);" src="https://cdn-icons-png.flaticon.com/512/271/271228.png" />
-    </a>
-    <a class="carousel-control-next" style="right:-160px;" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <img style="width:50px;height:50px; background:transparent;" src="https://cdn-icons-png.flaticon.com/512/271/271228.png" />
-    </a>
-</div>
-<div class="gsb-row" style="width: 70%; margin: 150px auto;">
+<div class="gsb-row" style="width: 70%; margin: auto;">
     <div class="row gsb-row-baslik justify-content-end">
         <div class="control d-flex flex-row">
             <a class="swiper-BasinAciklamasi-prev" style="outline:0;" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-a9d3411dd1a62977"><i class="fas fa-angle-up"></i></a>
