--- a/Web-Homework/Views/Login/Index.cshtml
+++ b/Web-Homework/Views/Login/Index.cshtml
@@ -64,7 +64,7 @@
                                 Login
                             </button>
                             <p class="small fw-bold mt-2 pt-1 mb-0">
-                                Don't have an account? <a href="#!"
+                                Don't have an account? <a href="/Login/Register"
                                                           class="link-danger">Register</a>
                             </p>
                         </div>
