--- a/Web-Homework/Views/Person/GetPerson.cshtml
+++ b/Web-Homework/Views/Person/GetPerson.cshtml
@@ -16,7 +16,7 @@
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     }
-    <h2>Update Person Page</h2>
+    <h2 key=26>Update Person Page</h2>
     @using (Html.BeginForm("UpdatePerson", "Person", FormMethod.Post))
     {
         @Html.LabelFor(person => person.PersonName)
@@ -39,7 +39,7 @@
             <br />*@
         @Html.DropDownListFor(person => person.RoleID, (List<SelectListItem>)ViewBag.listItemsBag, new { @class = "form-control" })
         <br />
-        <button class="btn btn-success">Save</button>
+        <button key=18 class="btn btn-success">Save</button>
     }
 
 </body>
