--- a/Web-Homework/Views/Person/Components/Role/Default.cshtml
+++ b/Web-Homework/Views/Person/Components/Role/Default.cshtml
@@ -1,8 +1,14 @@
 ﻿@model IEnumerable<Web_Homework.Models.Role>
+
+<li class="nav-item" style="margin:0px 15px; padding:0px 10px; border: 1px solid gray; background: #ddd; border-radius: 2px;">
+    <a href="/Person/Index" class="nav-link" style="font-weight: bold; font-size: 23px;">
+        Hepsi
+    </a>
+</li>
 @foreach (var item in Model)
 {
-    <li class="nav-item">
-        <a href="/Person/RoleDetails/@item.RoleID" class="nav-link">
+    <li class="nav-item" style="margin:0px 15px; padding:0px 10px; border: 1px solid gray; background: #ddd; border-radius: 2px;">
+        <a href="/Person/RoleDetails/@item.RoleID" class="nav-link" style="font-weight: bold; font-size: 23px;">
             @item.RoleName
         </a>
     </li>
