--- a/Web-Homework/Views/Shared/_AdminPanelLayout.cshtml
+++ b/Web-Homework/Views/Shared/_AdminPanelLayout.cshtml
@@ -44,36 +44,65 @@
     </style>
 </head>
 <body class="p-0">
-    <header>
-
+    <header style=" padding: 0 60px;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 p-0">
             <div class="container-fluid">
                 <img src="https://kygm.gsb.gov.tr/assets/img/kygmlogo-2019.svg" style="width:200px; height:100px" />
 
-                <img src="https://i.hizliresim.com/swd3eyd.png" style="width:200px; height:30px" />
+                <a asp-area="" asp-controller="Home" asp-action="Index" style="color: #2b2d42; margin-left:8px; text-decoration: none; font-size: 22px; font-family: 'Grandesign Neue Roman', sans-serif; "><img src="https://i.hizliresim.com/swd3eyd.png" style="width:200px; height:30px" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" style="display:flex;flex-direction:row-reverse;margin-right:20px">
+                    <div class="dropdown" style="margin:0 10px">
+                        <button class="btn btn-secondary dropdown-toggle drop_yazi" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            English
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" id="tr" href="#">Türkçe</a>
+                            <a class="dropdown-item" id="en" href="#">English</a>
+                        </div>
+                    </div>
                     <ul class="navbar-nav">
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item" style="display: flex; align-items: center; background: #DB0032; color: white;border-radius:5px; padding:10px 3px">
+                                <a class="nav-link" style="display: flex; align-items: center; padding: 0 10px; background: #DB0032; color: white;" asp-area="" asp-controller="Login" asp-action="Logout">
+                                    <span class="material-symbols-outlined" style="margin:0 4px;background-color: #DB0032;color:white">
+                                        login
+                                    </span>
+                                    <span key=0 style="background: #DB0032; color: white;">Login</span>
+                                </a>
+                            </li>
+
+                        }
+                        else
+                        {
+                            <li class="nav-item" style="margin:0 10px;display:flex;align-items:center;">
+                                <span class="material-symbols-outlined" style="color:#DB0032">
+                                    arrow_right_alt
+                                </span>
+                                <a key=8 class="nav-link text-decoration-underline">Hello Admin</a>
+                            </li>
+                        }
 
                         @if (User.Identity.IsAuthenticated)
                         {
+
                             <li class="nav-item mx-3">
-                                Hello @ViewBag.PersonName
+                                <a key=9 class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">Role Panel</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">Role Panel</a>
+                                <a key=10 class="nav-link" asp-area="" asp-controller="Person" asp-action="Index">People Panel</a>
                             </li>
-                            <li class="nav-item mx-3">
-                                <a class="nav-link" asp-area="" asp-controller="Person" asp-action="Index">Person Panel</a>
-                            </li>
-                            <li class="nav-item" style="display:flex;align-items:center;">
-                                <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a>
-                                <span class="material-symbols-outlined" style="color: #DB0032">
-                                    logout
-                                </span>
+                            <li class="nav-item" style="display: flex; align-items: center; background: #DB0032; color: white;border-radius:5px; padding:10px 3px">
+                                <a class="nav-link" style="display: flex; align-items: center; padding: 0 10px; background: #DB0032; color: white;" asp-area="" asp-controller="Login" asp-action="Logout">
+                                    <span key=2 style=" background: #DB0032; color: white;">Logout</span>
+                                    <span class="material-symbols-outlined" style="margin:0 4px;background-color: #DB0032;color:white">
+                                        logout
+                                    </span>
+                                </a>
                             </li>
                         }
                     </ul>
@@ -86,21 +115,22 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="footer" style="background-color: #ddd;width:auto; padding:10px;">
+    <footer class="footer" style=" position: fixed; bottom: 0; width: 100%; background-color: #ddd; padding: 10px;">
         <div class="container d-flex" style="display:flex;flex-direction:row;justify-content:space-between; background-color :#ddd;">
-            <ul class="socials d-flex flex-col" style="list-style: none; background-color: #ddd;">
-                <li style="margin: 10px;"><a title="Facebook" class="facebook" href="https://www.facebook.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/59/59439.png" /></a></li>
-                <li style="margin: 10px;"><a title="Twitter" class="twitter" href="https://twitter.com/gencliksporbak/" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/3128/3128212.png" /></a></li>
-                <li style="margin: 10px;"><a title="Youtube" class="youtube" href="https://www.youtube.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/1384/1384028.png" /></a></li>
-                <li style="margin: 10px;"><a title="Instagram" class="instagram" href="https://www.instagram.com/gencliksporbak"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" /></a></li>
+            <ul class="socials d-flex flex-col" style="list-style: none; background-color: #ddd; margin-bottom:0;">
+                <li style="margin: 10px;"><a title="Facebook" class="facebook " href="https://www.facebook.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/59/59439.png" /></a></li>
+                <li style="margin: 10px;"><a title="Twitter" class="twitter " href="https://twitter.com/gencliksporbak/" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/3128/3128212.png" /></a></li>
+                <li style="margin: 10px;"><a title="Youtube" class="youtube " href="https://www.youtube.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/1384/1384028.png" /></a></li>
+                <li style="margin: 10px;"><a title="Instagram" class="instagram " href="https://www.instagram.com/gencliksporbak"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/717/717414.png" /></a></li>
             </ul>
-            <ul style="list-style: none; background-color: #ddd;">
-                <li style="margin:10px; background-color: #ddd;color:white"><a href="https://www.gsb.gov.tr" alt="T.C. Gençlik ve Spor Bakanlığı Kurumsal Web Sitesi'ne Dön."><span class="ml-auto circle" style="background:#ddd">gsb.gov.tr</span></a></li>
+            <ul style="list-style: none; background-color: #ddd; margin-bottom: 0;">
+                <li style="margin:10px; background-color: #ddd;color:white"><a href="https://www.gsb.gov.tr" alt="T.C. Gençlik ve Spor Bakanlığı Kurumsal Web Sitesi'ne Dön."><span class="ml-auto circle link" style="background:#ddd;">www.gsb.gov.tr</span></a></li>
             </ul>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
