--- a/Web-Homework/Views/Shared/_Layout.cshtml
+++ b/Web-Homework/Views/Shared/_Layout.cshtml
@@ -37,16 +37,19 @@
             background-color: #edf2f4;
         }
 
-        .link:hover {
-            opacity: 0.8;
-            color: #DB0032;
+        .link {
+            opacity: 0.7;
         }
+
+            .link:hover {
+                opacity: 1;
+                color: #DB0032;
+            }
     </style>
 </head>
-<body class="p-0">
-    <header>
-
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 p-0">
+<body class="p-0" style="background: #EDF2F4;">
+    <header style=" padding: 0 60px;">
+        <nav class="pl-8 navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 p-0">
             <div class="container-fluid">
                 <img src="https://kygm.gsb.gov.tr/assets/img/kygmlogo-2019.svg" style="width:200px; height:100px" />
 
@@ -56,29 +59,43 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse" style="display:flex;flex-direction:row-reverse;margin-right:20px">
+                    <div class="dropdown" style="margin:0 10px">
+                        <button class="btn btn-secondary dropdown-toggle drop_yazi" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            English
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" id="tr" href="#">Türkçe</a>
+                            <a class="dropdown-item" id="en" href="#">English</a>
+                        </div>
+                    </div>
                     <ul class="navbar-nav">
+
                         @if (!User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item" style="display:flex;align-items:center;">
-                                <span class="material-symbols-outlined" style="color: #DB0032">
-                                    login
-                                </span>
-                                <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                            <li class="nav-item" style="display: flex; align-items: center; background: #DB0032; color: white;border-radius:5px; padding:10px 3px">
+                                <a class="nav-link" style="display: flex; align-items: center; padding: 0 10px; background: #DB0032; color: white;" asp-area="" asp-controller="Login" asp-action="Logout">
+                                    <span class="material-symbols-outlined" style="margin:0 4px;background-color: #DB0032;color:white">
+                                        login
+                                    </span>
+                                    <span key=0 style=" background: #DB0032; color: white;">Login</span>
+                                </a>
                             </li>
                         }
                         else
                         {
-                            <li class="nav-item" style="display:flex;align-items:center;">
-                                <span class="material-symbols-outlined" style="color: #DB0032">
+                            <li class="nav-item" style="margin:0 10px;display:flex;align-items:center;">
+                                <span class="material-symbols-outlined" style="color:#DB0032">
                                     arrow_right_alt
                                 </span>
-                                <a class="nav-link text-decoration-underline">Hello</a>
+                                <a key=1 class="nav-link text-decoration-underline">Hello</a>
                             </li>
-                            <li class="nav-item" style="display:flex;align-items:center;">
-                                <a class="nav-link" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a>
-                                <span class="material-symbols-outlined" style="color: #DB0032">
-                                    logout
-                                </span>
+                            <li class="nav-item" style="display: flex; align-items: center; background: #DB0032; color: white;border-radius:5px; padding:10px 3px">
+                                <a class="nav-link" style="display: flex; align-items: center; padding: 0 10px; background: #DB0032; color: white;" asp-area="" asp-controller="Login" asp-action="Logout">
+                                    <span key=2 style=" background: #DB0032; color: white;">Logout</span>
+                                    <span class="material-symbols-outlined" style="margin:0 4px;background-color: #DB0032;color:white">
+                                        logout
+                                    </span>
+                                </a>
                             </li>
                         }
 
@@ -99,48 +116,50 @@
             </div>
         </nav>
         <ul class="navbar-nav flex-grow-1 text-center" style="display: flex; flex-direction: row; justify-content: center; align-items: center; margin-bottom:20px; list-style:none;text-decoration:none;">
-            <li class="nav-item mx-3" style="">
-                <span class="material-symbols-outlined">
+            <li class="nav-item mx-3" style="display:flex;align-items:center">
+                <span class="material-symbols-outlined" style="color:#DB0032; margin:0 4px;">
                     home
                 </span>
-                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">
+                <a key=3 class="link" style="font-size: 24px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">
                     Home
                 </a>
             </li>
             <li class="nav-item mx-3">
-                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Announcements</a>
+                <a key=4 class="link" style="font-size: 24px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Duyurular">Announcements</a>
             </li>
             <li class="nav-item mx-3">
-                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Gallery</a>
+                <a key=5 class="link" style="font-size: 24px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Gallery</a>
             </li>
             <li class="nav-item mx-3">
-                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Activities</a>
+                <a key=6 class="link" style="font-size: 24px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">Activities</a>
             </li>
             <li class="nav-item mx-3">
-                <a class="link" style="font-size: 20px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Index">About Us</a>
+                <a key=7 class="link" style="font-size: 24px; color: #2b2d42; " asp-area="" asp-controller="Home" asp-action="Iletisim">Contact</a>
             </li>
         </ul>
     </header>
-    <div class="container">
+    <div>
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-    <footer class="footer" style="background-color: #ddd;width:auto; padding:10px;">
+    <footer class="footer" style=" position: fixed; bottom: 0; width: 100%; background-color: #ddd; padding: 10px;">
         <div class="container d-flex" style="display:flex;flex-direction:row;justify-content:space-between; background-color :#ddd;">
-            <ul class="socials d-flex flex-col" style="list-style: none; background-color: #ddd;">
-                <li style="margin: 10px;"><a title="Facebook" class="facebook" href="https://www.facebook.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/59/59439.png" /></a></li>
-                <li style="margin: 10px;"><a title="Twitter" class="twitter" href="https://twitter.com/gencliksporbak/" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/3128/3128212.png" /></a></li>
-                <li style="margin: 10px;"><a title="Youtube" class="youtube" href="https://www.youtube.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/1384/1384028.png" /></a></li>
-                <li style="margin: 10px;"><a title="Instagram" class="instagram" href="https://www.instagram.com/gencliksporbak"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" /></a></li>
+            <ul class="socials d-flex flex-col" style="list-style: none; background-color: #ddd; margin-bottom:0;">
+                <li style="margin: 10px;"><a title="Facebook" class="facebook " href="https://www.facebook.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/59/59439.png" /></a></li>
+                <li style="margin: 10px;"><a title="Twitter" class="twitter " href="https://twitter.com/gencliksporbak/" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/3128/3128212.png" /></a></li>
+                <li style="margin: 10px;"><a title="Youtube" class="youtube " href="https://www.youtube.com/gencliksporbak" target="_blank"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/1384/1384028.png" /></a></li>
+                <li style="margin: 10px;"><a title="Instagram" class="instagram " href="https://www.instagram.com/gencliksporbak"><img style="width: 30px; height: 30px; background-color: #ddd;" src="https://cdn-icons-png.flaticon.com/512/717/717414.png" /></a></li>
             </ul>
-            <ul style="list-style: none; background-color: #ddd;">
-                <li style="margin:10px; background-color: #ddd;color:white"><a href="https://www.gsb.gov.tr" alt="T.C. Gençlik ve Spor Bakanlığı Kurumsal Web Sitesi'ne Dön."><span class="ml-auto circle" style="background:#ddd">gsb.gov.tr</span></a></li>
+            <ul style="list-style: none; background-color: #ddd; margin-bottom: 0;">
+                <li style="margin:10px; background-color: #ddd;color:white"><a href="https://www.gsb.gov.tr" alt="T.C. Gençlik ve Spor Bakanlığı Kurumsal Web Sitesi'ne Dön."><span class="ml-auto circle link" style="background:#ddd;">www.gsb.gov.tr</span></a></li>
             </ul>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
