--- a/Web-Homework/Views/Home/Iletisim.cshtml
+++ b/Web-Homework/Views/Home/Iletisim.cshtml
@@ -7,17 +7,17 @@
     <table>
         <tbody>
             <tr>
-                <td><strong>Adres</strong>&nbsp;</td>
-                <td>&nbsp;: Söğütözü Mah. 2176 Sokak No:25 Çankaya / Ankara</td>
+                <td><strong key=50>Adres</strong>&nbsp;</td>
+                <td key=51>&nbsp;: Söğütözü Mah. 2176 Sokak No:25 Çankaya / Ankara</td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
-                <td><strong>Telefon</strong></td>
+                <td><strong key=52>Telefon</strong></td>
                 <td>&nbsp;: 444 0 472&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
-                <td><strong>Belgegeçer</strong></td>
+                <td><strong key=53>Belgegeçer</strong></td>
                 <td>&nbsp;:&nbsp;+ 90 312 551 65 73</td>
                 <td>&nbsp;</td>
             </tr>
@@ -25,7 +25,7 @@
     </table>
 </div>
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 80%; margin: 30px auto;">
-    <strong style="display:none;">İletişim Bilgileri</strong>
+    <strong style="display:none;" key=54>İletişim Bilgileri</strong>
 
     <br>
     <div style="display:flex; align-items:center;justify-content:center;">
