--- a/Web-Homework/Views/Home/Duyurular.cshtml
+++ b/Web-Homework/Views/Home/Duyurular.cshtml
@@ -2,14 +2,14 @@
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="gsb-row" style="width: 70%; margin: auto;">
+<div class="gsb-row" style="width: 60%; margin: auto;">
     <div class="row gsb-row-baslik justify-content-end">
         <div class="control d-flex flex-row">
             <a class="swiper-BasinAciklamasi-prev" style="outline:0;" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-a9d3411dd1a62977"><i class="fas fa-angle-up"></i></a>
             <a class="swiper-BasinAciklamasi-next" style="outline:0;" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-a9d3411dd1a62977"><i class="fas fa-angle-down"></i></a>
         </div>
         <div class="baslik d-flex flex-row">
-            <span style="font-size:30px; font-weight:bolder">Duyurular</span>
+            <span key=4 style="font-size:30px; font-weight:bolder">Duyurular</span>
         </div>
     </div>
 
@@ -19,8 +19,8 @@
                 <li class="list-group-item haberduyuru list-group-item-action">
                     <a style="text-decoration:none;" href="/Duyuru/252664/tc-genclik-ve-spor-bakanligi-kredi-ve-yurtlar-genel-mudurlugunden-duyurulur.aspx" title="" class="flex-column">
                         <div class="d-flex flex-column" style="background:white;">
-                            <small class="text-muted" style="background:white;">2 EYLÜL 2022 CUMA</small>
-                            <p class=" yazikes" style="background:white;">T.C. GENÇLİK VE SPOR BAKANLIĞI KREDİ VE YURTLAR GENEL MÜDÜRLÜĞÜNDEN DUYURULUR</p>
+                            <small key=34 class="text-muted" style="background:white;">2 EYLÜL 2022 CUMA</small>
+                            <p key=35 class=" yazikes" style="background:white;">T.C. GENÇLİK VE SPOR BAKANLIĞI KREDİ VE YURTLAR GENEL MÜDÜRLÜĞÜNDEN DUYURULUR</p>
                         </div>
                     </a>
                 </li>
@@ -29,8 +29,8 @@
                     <a style="text-decoration:none;" href="/Duyuru/235622/yabanci-uyruklu-ogrencilerin-dikkatine.aspx" title="" class="flex-column">
 
                         <div class="d-flex flex-column" style="background:white;">
-                            <small class="text-muted" style="background:white;">13 TEMMUZ 2021 SALI</small>
-                            <p class=" yazikes" style="background:white;">YABANCI UYRUKLU ÖĞRENCİLERİN DİKKATİNE</p>
+                            <small key=36 class="text-muted" style="background:white;">13 TEMMUZ 2021 SALI</small>
+                            <p key=37 class=" yazikes" style="background:white;">YABANCI UYRUKLU ÖĞRENCİLERİN DİKKATİNE</p>
                         </div>
                     </a>
                 </li>
@@ -44,8 +44,8 @@
                     <a style="text-decoration:none;" href="/Duyuru/252664/tc-genclik-ve-spor-bakanligi-kredi-ve-yurtlar-genel-mudurlugunden-duyurulur.aspx" title="" class="flex-column">
 
                         <div class="d-flex flex-column" style="background:white;">
-                            <small class="text-muted" style="background:white;">2 EYLÜL 2022 CUMA</small>
-                            <p class=" yazikes" style="background:white;">T.C. GENÇLİK VE SPOR BAKANLIĞI KREDİ VE YURTLAR GENEL MÜDÜRLÜĞÜNDEN DUYURULUR</p>
+                            <small key=34 class="text-muted" style="background:white;">2 EYLÜL 2022 CUMA</small>
+                            <p key=35 class=" yazikes" style="background:white;">T.C. GENÇLİK VE SPOR BAKANLIĞI KREDİ VE YURTLAR GENEL MÜDÜRLÜĞÜNDEN DUYURULUR</p>
                         </div>
                     </a>
                 </li>
@@ -57,8 +57,8 @@
                     <a style="text-decoration:none;" href="/Duyuru/235622/yabanci-uyruklu-ogrencilerin-dikkatine.aspx" title="" class="flex-column">
 
                         <div class="d-flex flex-column" style="background:white;">
-                            <small class="text-muted" style="background:white;">13 TEMMUZ 2021 SALI</small>
-                            <p class=" yazikes" style="background:white;">YABANCI UYRUKLU ÖĞRENCİLERİN DİKKATİNE</p>
+                            <small key=36 class="text-muted" style="background:white;">13 TEMMUZ 2021 SALI</small>
+                            <p key=37 class=" yazikes" style="background:white;">YABANCI UYRUKLU ÖĞRENCİLERİN DİKKATİNE</p>
                         </div>
                     </a>
                 </li>
@@ -73,8 +73,8 @@
                     <a style="text-decoration:none;" href="/Duyuru/252664/tc-genclik-ve-spor-bakanligi-kredi-ve-yurtlar-genel-mudurlugunden-duyurulur.aspx" title="" class="flex-column">
 
                         <div class="d-flex flex-column" style="background:white;">
-                            <small class="text-muted" style="background:white;">2 EYLÜL 2022 CUMA</small>
-                            <p class=" yazikes" style="background:white;">T.C. GENÇLİK VE SPOR BAKANLIĞI KREDİ VE YURTLAR GENEL MÜDÜRLÜĞÜNDEN DUYURULUR</p>
+                            <small key=34 class="text-muted" style="background:white;">2 EYLÜL 2022 CUMA</small>
+                            <p key=35 class=" yazikes" style="background:white;">T.C. GENÇLİK VE SPOR BAKANLIĞI KREDİ VE YURTLAR GENEL MÜDÜRLÜĞÜNDEN DUYURULUR</p>
                         </div>
                     </a>
                 </li>
@@ -83,8 +83,8 @@
                     <a style="text-decoration:none;" href="/Duyuru/235622/yabanci-uyruklu-ogrencilerin-dikkatine.aspx" title="" class="flex-column">
 
                         <div class="d-flex flex-column" style="background:white;">
-                            <small class="text-muted" style="background:white;">13 TEMMUZ 2021 SALI</small>
-                            <p class=" yazikes" style="background:white;">YABANCI UYRUKLU ÖĞRENCİLERİN DİKKATİNE</p>
+                            <small key=36 class="text-muted" style="background:white;">13 TEMMUZ 2021 SALI</small>
+                            <p key=37 class=" yazikes" style="background:white;">YABANCI UYRUKLU ÖĞRENCİLERİN DİKKATİNE</p>
                         </div>
                     </a>
                 </li>
