--- a/Web-Homework/Views/Login/Register.cshtml
+++ b/Web-Homework/Views/Login/Register.cshtml
@@ -52,7 +52,7 @@
                         </div>
                         <div class=" mb-4">
                             <label class="form-label" for="form3Example3">Email Address</label>
-                            @Html.TextBoxFor(person => person.PersonEmail, new { @class = "form-control" })
+                            @Html.TextBoxFor(person => person.PersonEmail, new { @class = "form-control", @type = "email" })
                             @*<input name="PersonEmail" type="email" id="form3Example3" class="form-control form-control-lg"
                                 placeholder="Enter a valid email address" />*@
                         </div>
@@ -72,7 +72,7 @@
                         <div class=" mb-3">
                             <label class="form-label" for="form3Example4">Password</label>
 
-                            @Html.TextBoxFor(person => person.Password, new { @class = "form-control" })
+                            @Html.PasswordFor(person => person.Password, new { @class = "form-control" })
                         </div>
                         <button class="btn btn-danger">Register</button>
                     </form>
